// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should execute callBack on click outside of dialog 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Dialog should execute callBack on close button click 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Dialog should execute callBack on escape button click 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Dialog should execute onClose callBack once on escape button click 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="content"
  />
</div>
`;

exports[`Dialog should execute onClose callBack once on escape button click. Internal dialog closed by cross icon 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="content"
  />
</div>
`;

exports[`Dialog should render correctly with attributes 1`] = `
<div
  class="test-class container"
  data-qa="Dialog"
  id="test-id"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Dialog should render correctly with closeable prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
/>
`;

exports[`Dialog should render correctly with content 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="content"
  >
    Test content
  </div>
</div>
`;

exports[`Dialog should render correctly with footer prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="footer container direction-horizontal justify-stretch"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <button
      class="container size-44 color-gray-outlined"
      data-qa="Button"
    >
      <span
        class="text"
      >
        OK
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog should render correctly with fullscreen prop 1`] = `
<div
  class="container fullscreen"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(1.05) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Dialog should render correctly with icon prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="header container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="icon"
    >
      <span
        class="container size-20 shape-round"
        data-qa="Icon"
      >
        <svg
          data-qa="Menu"
          fill="none"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 5h12M4 10h12M4 15h12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
    </div>
    <div
      class="titleWrapper container direction-vertical"
      data-qa="Space"
      style="column-gap: 8px; row-gap: 8px;"
    >
      <div
        class="title"
      >
        Test title
      </div>
      <div
        class="subtitle"
      >
        Test subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog should render correctly with no props 1`] = `<div />`;

exports[`Dialog should render correctly with subtitle prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="header container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="titleWrapper container direction-vertical"
      data-qa="Space"
      style="column-gap: 8px; row-gap: 8px;"
    >
      <div
        class="title"
      >
        Test title
      </div>
      <div
        class="subtitle"
      >
        Test subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog should render correctly with title prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <div
    class="header container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="titleWrapper container direction-vertical"
      data-qa="Space"
      style="column-gap: 8px; row-gap: 8px;"
    >
      <div
        class="title"
      >
        Test title
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog should render correctly with visible prop 1`] = `
<div
  class="container"
  data-qa="Dialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
>
  <span
    class="close container size-28 shape-round"
    data-qa="Icon"
  >
    <svg
      data-qa="Cross"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0)"
      >
        <path
          d="m10 10-4.95 4.95m0-9.9L10 10 5.05 5.05ZM10 10l4.95 4.95L10 10Zm0 0 4.95-4.95L10 10Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M79-22H-51a5 5 0 0 0-5 5v54a5 5 0 0 0 5 5H79a5 5 0 0 0 5-5v-54a5 5 0 0 0-5-5Z"
          stroke="currentColor"
          stroke-dasharray="10 5"
        />
      </g>
      <defs>
        <clippath
          id="clip0"
        >
          <path
            d="M0 0h20v20H0z"
            fill="currentColor"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;
